Fixed nav overflow on contact page

--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -67,13 +67,15 @@
     padding: 0;
   }
   header {
-    max-width: 100%;
+    max-width: 100vw;
     padding: 0;
     min-height: 7vh;
     height: fit-content;
 
     nav {
-      width: 100%;
+      max-width: 100%;
+      padding: 0 4vw;
+
       background: $dark-blue;
       justify-content: space-between;
 
@@ -88,22 +90,19 @@
       }
 
       #hamburger-button {
-        display: flex;
+        display: inline-block;
         width: 44px;
         height: 44px;
         border: none;
         background: none;
-        justify-content: center;
-        align-items: center;
         cursor: pointer;
+
+        // Left align the button with the edge of the contact wrapper at lower screen widths
+        margin-left: 4px;
       }
 
-      .logotype {
-        padding: 0 20px 0 0;
-      }
-
-      .mobile-header {
-        padding: 0 20px 0 0;
+      .logotype-header-wrapper {
+        display: flex;
       }
     }
   }
