--- a/scss/style.scss
+++ b/scss/style.scss
@@ -49,7 +49,6 @@ header {
     // Only shows on mobile
     #hamburger-button {
       display: none;
-      margin: 0 0 0 20px;
     }
 
     .logotype {
